fix: modal content overflow issues

--- a/packages/scratch-gui/src/components/feature-callout-popover/feature-callout-popover.css
+++ b/packages/scratch-gui/src/components/feature-callout-popover/feature-callout-popover.css
@@ -46,6 +46,7 @@
 }
 
 .non-blocking-content {
+    display: flex;
     border: none;
     border-radius: 0;
     height: fit-content;
@@ -53,7 +54,6 @@
     padding: 0;
     margin: 0;
     position: fixed;
-    overflow: visible;
     z-index: 1000;
     pointer-events: auto;
     outline: none;
